--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.11",
-    "json-server": "^0.16.3",
     "@types/node": "^17.0.15",
-    "@types/react": "^17.0.39"
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "json-server": "^0.16.3"
   }
 }
